--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    {{>menu}}
     {{{body}}}
+    {{>footer}}
   </body>
 </html>
